--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
